grammar.js
        document: ($) => repeat($._node),
        doctype: ($) => seq(
          "<!",
          alias($._doctype, "doctype"),
          /[^>]+/,
          ">"
        ),
        _doctype: (_) => /[Dd][Oo][Cc][Tt][Yy][Pp][Ee]/,
        _node: ($) => choice(
          $.doctype,
          $.entity,
          $.text,
          $.element,
          $.script_element,
          $.style_element,
          $.erroneous_end_tag
        ),
        element: ($) => choice(
          seq(
            $.start_tag,
            repeat($._node),
            choice($.end_tag, $._implicit_end_tag)
          ),
          $.self_closing_tag
        ),
        style_element: ($) => seq(
          alias($.style_start_tag, $.start_tag),
          optional($.raw_text),
          $.end_tag
        ),
        start_tag: ($) => seq(
          "<",
          alias($._start_tag_name, $.tag_name),
          field("attribute", repeat($.attribute)),
          ">"
        ),
        self_closing_tag: ($) => seq(
          "<",
          alias($._start_tag_name, $.tag_name),
          field("attribute", repeat($.attribute)),
          "/>"
        ),
        end_tag: ($) => seq(
          "</",
          alias($._end_tag_name, $.tag_name),
          ">"
        ),
        attribute: ($) => seq(
          $.attribute_name,
          optional(seq(
            "=",
            choice(
              $.attribute_value,
              $.quoted_attribute_value
            )
          ))
        ),
        attribute_name: (_) => /[^<>"'/=\s]+/,
        attribute_value: (_) => /[^<>"'=\s]+/,
        // An entity can be named, numeric (decimal), or numeric (hexacecimal). The
        // longest entity name is 29 characters long, and the HTML spec says that
        // no more will ever be added.
        entity: (_) => /&(#([xX][0-9a-fA-F]{1,6}|[0-9]{1,5})|[A-Za-z]{1,30});?/,
        quoted_attribute_value: ($) => choice(
          seq("'", optional(alias(/[^']+/, $.attribute_value)), "'"),
          seq('"', optional(alias(/[^"]+/, $.attribute_value)), '"')
        ),
        text: (_) => /[^<>&\s]([^<>&]*[^<>&\s])?/
      }
    });
  }
});

// main/NodeMap.ts
var NodeMap = class {
  cachedNodes;
  extraNodes;
  constructor() {
    this.cachedNodes = /* @__PURE__ */ new Map();
    this.extraNodes = /* @__PURE__ */ new Set();
  }
  /**
   * The method used to collect, cache and return the entire grammar
   * new nodes needing cached can be added at a later point
   */
  add(...nodes2) {
    if (this.size() != 0) {
      nodes2.forEach((node) => {
        if (!this.has(node)) {
          this.set(node);
        }
      });
      return this.cachedNodes.values();
    }
    nodes2.forEach((node) => this.set(node));
    return this.cachedNodes.values();
  }
  /**
   * Map the node to the cache
   */
  set(node) {
    this.cachedNodes.set(node.name, node);
  }
  /**
   * returns all the cached nodes, including the extra nodes specified
   */
  all() {
    return this.extraNodes.size == 0 ? this.cachedNodes.values() : this.mergedWith(...this.cachedNodes.values());
  }
  /**
   * rule specific nodes to be used temporarily.
   */
  with(...nodes2) {
    nodes2.forEach((node) => this.extraNodes.add(node));
    return this;
  }
  /**
   * Checks if a node already exists
   */
  has(node) {
    return this.cachedNodes.has(node.name);
  }
  /**
   * Return cached nodes without the specified nodes.
   *
   * If extra nodes are provided, it will be merged and returned as well
   */
  without(...nodes2) {
    const temp = new Map(this.cachedNodes);
    nodes2.forEach((node) => temp.delete(node.name));
    return this.extraNodes.size == 0 ? temp.values() : this.mergedWith(...temp.values());
  }
  /**
   * returns the size of the Data Structure
   */
  size() {
    return this.cachedNodes.size;
  }
  /**
   * Return the merged node set and clears the extraNodes.
   */
  mergedWith(...nodes2) {
    const temp = new Set(this.extraNodes);
    this.extraNodes.clear();
    return temp.union(new Set(nodes2));
  }
};

// main/grammar.ts
var import_grammar = __toESM(require_grammar());
var nodes = new NodeMap();
function pipeSep1(rule) {
  return seq(rule, repeat(seq("|", rule)));
}
function ampSep1(rule) {
  return seq(rule, repeat(seq(token("&"), rule)));
}
function keyword(word, aliasAsWord = true) {
  let result = new RegExp(word, "i");
  if (aliasAsWord)
    result = alias(result, word);
  return result;
}
var PREC = {
  COMMA: -1,
  CAST: -1,
  LOGICAL_OR_2: 1,
  LOGICAL_XOR: 2,
  LOGICAL_AND_2: 3,
  ASSIGNMENT: 4,
  TERNARY: 5,
  NULL_COALESCE: 6,
  LOGICAL_OR_1: 7,
  LOGICAL_AND_1: 8,
  BITWISE_OR: 9,
  BITWISE_XOR: 10,
  BITWISE_AND: 11,
  EQUALITY: 12,
  INEQUALITY: 13,
  PIPE: 14,
  CONCAT: 15,
  SHIFT: 16,
  PLUS: 17,
  TIMES: 18,
  EXPONENTIAL: 19,
  NEG: 20,
  INSTANCEOF: 21,
  INC: 22,
  SCOPE: 23,
  NEW: 24,
  CALL: 25,
  MEMBER: 26,
  DEREF: 27,
  IDENTIFIER: 1,
  KEYWORD: 2,
  ECHO: 3,
  COMMENT: 4
};
function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}
function commaSep(rule) {
  return optional(commaSep1(rule));
}
var grammar_default = grammar(import_grammar.default, {
  name: "blade",
    _node: ($) => choice(
      ...nodes.add(
        // tree-sitter-html
        $.doctype,
        $.entity,
        $.text,
        $.element,
        $.script_element,
        $.style_element,
        $.erroneous_end_tag,
        // tree-sitter-blade
        $.keyword,
        $.php_statement,
        $.inline_directive,
        $.props,
        $.comment,
        $.switch,
        $.loops,
        $.envoy,
        $.livewire,
        // nested
        $.fragment,
        $.section,
        $.once,
        $.verbatim,
        $.stack,
        // conditional
        $.conditional
      )
    ),
    // ------------------
    // https://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    comment: (_) => token(prec(PREC.COMMENT, seq("{{--", /[^-]*-+([^}-][^-]*-+)*/, "}}"))),
    // !keywords
    php_statement: ($) => choice(
      $.escaped,
      $.unescaped,
      $.setup,
      $.inline_raw,
      $.multi_line_raw,
      $.php
    ),
    // From tree-sitter-php
    multi_line_raw: ($) => seq(
      field("directive_start", "@php"),
      optional(alias($.text, $.php_only)),
      field("directive_end", "@endphp")
    ),
    // tree-sitter-html override
    attribute: ($) => choice(
      $.blade_attribute,
      $.html_attribute,
      $.expression_attribute,
      $.short_attribute,
      $.php_statement
    ),
    attribute_name: (_) => token(prec(-1, /[^<>"'/=\s]+/)),
    attribute_value: (_) => token(prec(-1, /[^<>"'/=\s]+/)),
    quoted_attribute_value: ($) => choice(
      seq(
        "'",
        optional(
          repeat(
            choice(
              $.php_statement,
              $.conditional,
              $.inline_directive,
              $.comment,
              alias($._singly_quoted_attribute_text, $.attribute_value)
            )
          )
        ),
        "'"
      ),
      seq(
        '"',
        optional(
          repeat(
            choice(
              $.php_statement,
              $.conditional,
              $.inline_directive,
              $.comment,
              alias($._doubly_quoted_attribute_text, $.attribute_value)
            )
          )
        ),
        '"'
      )
    ),
    conditional: ($) => choice(
      $.if,
      $.unless,
      $.isset,
      $.empty,
      $.auth,
      $.guest,
      $.production,
      $.env,
      $.hasSection,
      $.sectionMissing,
      $.error,
      $.authorization,
      $.feature,
      $.custom,
      $.session,
      $.context
    ),
    conditional_keyword: ($) => choice(
      "@else",
      $.elseif
    ),
    conditional_body: ($) => repeat1(choice(...nodes.with($.conditional_keyword).all())),
    text: ($) => prec.right(repeat1($._text)),
    // hidden to reduce AST noise in php_only #39
    // It is selectively unhidden for other areas
    // Create alternative text rep for php_only
    _text: (_) => (
      // custom directive conflict resolution
      choice(
        token(prec(-1, /@[a-zA-Z\d]*[^\(-]/)),
        // orphan tags
        token(prec(-2, /[{}!@()?,-]/)),
        token(
          prec(
            -1,
            /[^\s(){!}@-]([^<>(){!}@,?]*[^<>{!}()@?,-])?/
            // general text
          )
        )
      )
    ),
    _singly_quoted_attribute_text: (_) => prec.right(
      repeat1(
        choice(
          token(prec(-2, /[{}]/)),
          token(prec(-1, /[^'{}]/))
        )
      )
    ),
    _doubly_quoted_attribute_text: (_) => prec.right(
      repeat1(
        choice(
          token(prec(-2, /[{}]/)),
          token(prec(-1, /[^"{}]/))
        )
      )
    ),
    // ! PHP Expression Grammar (from tree-sitter-php)
    expression: ($) => choice(
      $.augmented_assignment_expression,
      $.conditional_expression,
      $.assignment_expression,
      $.binary_expression,
      $._unary_expression
    ),
    binary_expression: ($) => choice(
      prec(
        PREC.INSTANCEOF,
        seq(
          field("left", $._unary_expression),
          field("operator", keyword("instanceof")),
          field("right", $._class_name_reference)
        )
      ),
      prec.right(
        PREC.NULL_COALESCE,
        seq(
          field("left", $.expression),
          field("operator", "??"),
          field("right", $.expression)
        )
      ),
      prec.right(
        PREC.EXPONENTIAL,
        seq(
          field("left", $.expression),
          field("operator", "**"),
          field("right", $.expression)
        )
      ),
      ...[
        [keyword("and"), PREC.LOGICAL_AND_2],
        [keyword("or"), PREC.LOGICAL_OR_2],
        [keyword("xor"), PREC.LOGICAL_XOR],
        ["||", PREC.LOGICAL_OR_1],
        ["&&", PREC.LOGICAL_AND_1],
        ["|", PREC.BITWISE_OR],
        ["^", PREC.BITWISE_XOR],
        ["&", PREC.BITWISE_AND],
        ["==", PREC.EQUALITY],
        ["!=", PREC.EQUALITY],
        ["<>", PREC.EQUALITY],
        ["===", PREC.EQUALITY],
        ["!==", PREC.EQUALITY],
        ["<", PREC.INEQUALITY],
        [">", PREC.INEQUALITY],
        ["<=", PREC.INEQUALITY],
        [">=", PREC.INEQUALITY],
        ["<=>", PREC.EQUALITY],
        ["|>", PREC.PIPE],
        [".", PREC.CONCAT],
        ["<<", PREC.SHIFT],
        [">>", PREC.SHIFT],
        ["+", PREC.PLUS],
        ["-", PREC.PLUS],
        ["*", PREC.TIMES],
        ["/", PREC.TIMES],
        ["%", PREC.TIMES]
        // @ts-ignore
      ].map(
        ([op, p]) => prec.left(
          p,
          seq(
            field("left", $.expression),
            // @ts-ignore
            field("operator", op),
            field("right", $.expression)
          )
        )
      )
    ),
    _unary_expression: ($) => choice($.primary_expression, $.unary_op_expression, $.cast_expression),
    primary_expression: ($) => choice(
      $._variable,
      $.literal,
      $.print_intrinsic,
      $.array_creation_expression,
      $.parenthesized_expression,
      $.function_call_expression,
      $.scoped_call_expression,
      $.class_constant_access_expression,
      $.qualified_name,
      $.relative_name,
      $.name,
      $.update_expression,
      $.anonymous_function,
      $.arrow_function,
      $.object_creation_expression,
      $.throw_expression
    ),
    _variable: ($) => choice(
      $.variable_name,
      $.member_access_expression,
      $.subscript_expression
    ),
    _member_name: ($) => choice(
      field("name", choice($.name, $._simple_variable)),
      seq("{", field("name", $.expression), "}")
    ),
    parenthesized_expression: ($) => seq("(", $.expression, ")"),
    function_call_expression: ($) => seq(
      field("function", choice($.name, $._callable_expression)),
      field("arguments", $.arguments)
    ),
    _callable_expression: ($) => choice(
      $._callable_variable,
      $.parenthesized_expression,
      $._dereferencable_scalar,
      alias($._new_dereferencable_expression, $.object_creation_expression)
    ),
    scoped_call_expression: ($) => prec(
      PREC.CALL,
      seq(
        field("scope", $._scope_resolution_qualifier),
        "::",
        $._member_name,
        field("arguments", $.arguments)
      )
    ),
    _scope_resolution_qualifier: ($) => choice(
      $.relative_scope,
      $._name,
      $._dereferencable_expression
    ),
    arguments: ($) => seq("(", optional(seq(commaSep1($.argument), optional(","))), ")"),
    argument: ($) => seq(
      optional($._argument_name),
      choice($.expression, $.variadic_unpacking)
    ),
    _argument_name: ($) => seq(field("name", alias($.name, $.name)), ":"),
    _class_name_reference: ($) => choice(
      $._name,
      $._new_variable,
      $.parenthesized_expression
    ),
    array_creation_expression: ($) => choice(
      seq("[", commaSep($.array_element_initializer), optional(","), "]"),
      seq(
        "array",
        "(",
        commaSep($.array_element_initializer),
        optional(","),
        ")"
      )
    ),
    array_element_initializer: ($) => prec.right(choice(
      $.array_element_value_initializer,
      $.array_element_key_value_initializer,
      $.array_element_spreading_initializer
    )),
    array_element_value_initializer: ($) => $.expression,
    literal: ($) => choice($.integer, $.float, $._string, $.boolean, $.null),
    _string: ($) => choice($.string, $.encapsed_string),
    string: (_) => seq(
      "'",
      repeat(choice(token(prec(3, /(\\.|[^'\\])+/)), token.immediate("\\'"))),
      "'"
    ),
    name: (_) => token(prec(PREC.IDENTIFIER, /[a-zA-Z_][a-zA-Z0-9_]*/))
  }
});
export {
  grammar_default as default
};
/**
 * @file HTML grammar for tree-sitter
 * @author Max Brunsfeld <maxbrunsfeld@gmail.com>
 * @author Amaan Qureshi <amaanq12@gmail.com>
 * @license MIT
 */
/**
 * @file Blade grammar for tree-sitter
 * @author Emran Mashhadi Ramezan <2t5ukanu@duck.com>
 * @license MIT
 */
